--- a/2_1_introduction_to_pandas.ipynb
+++ b/2_1_introduction_to_pandas.ipynb
@@ -784,7 +784,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Discuss what you found here"
+    "pd.read_xml()\n",
+    "pd. read_table"
    ]
   },
   {
@@ -803,6 +804,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -810,7 +818,7 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Y"
    ]
   },
   {
@@ -1342,7 +1350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Your thoughts here*"
+    "Weight, Seat Height, and Duration are all NaNs"
    ]
   },
   {
@@ -1390,7 +1398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Your thoughts here*"
+    "Not particularly\n"
    ]
   },
   {
@@ -1445,7 +1453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Your thoughts here*"
+    "139937 rows of 29 columns\n"
    ]
   },
   {
@@ -1499,7 +1507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Your thoughts here*"
+    "describe gave us summary statistics for each of the columns, while info gave us datatypes and and non-null counts for each column\n"
    ]
   }
  ],
