--- a/2_1_introduction_to_pandas.ipynb
+++ b/2_1_introduction_to_pandas.ipynb
@@ -28,25 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd"
    ]
@@ -1521,11 +1509,18 @@
    "source": [
     "describe gave us summary statistics for each of the columns, while info gave us datatypes and and non-null counts for each column\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this is a change"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit (microsoft store)",
+   "display_name": "Python 3.9.12 64-bit ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1539,7 +1534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.12"
   },
   "varInspector": {
    "cols": {
@@ -1572,7 +1567,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "1d8c9403afeb84de7daaf6598be9b1ba92d131f3bb08c15dccc590836d4357db"
+    "hash": "d4c98142d5e699ac7591e84e4478b23af5ea40591ff86322816b472a02f5fc7a"
    }
   }
  },
