--- a/2_2_dataframe_verbs_select_filter_mutate.ipynb
+++ b/2_2_dataframe_verbs_select_filter_mutate.ipynb
@@ -15,12 +15,12 @@
      "text": [
       "Collecting dfply\n",
       "  Downloading dfply-0.3.3-py3-none-any.whl (612 kB)\n",
-      "\u001b[K     |████████████████████████████████| 612 kB 1.6 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: pandas in /Users/toddiverson/.pyenv/versions/anaconda3-2022.05/lib/python3.9/site-packages (from dfply) (1.4.2)\n",
-      "Requirement already satisfied: numpy in /Users/toddiverson/.pyenv/versions/anaconda3-2022.05/lib/python3.9/site-packages (from dfply) (1.21.5)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/toddiverson/.pyenv/versions/anaconda3-2022.05/lib/python3.9/site-packages (from pandas->dfply) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/toddiverson/.pyenv/versions/anaconda3-2022.05/lib/python3.9/site-packages (from pandas->dfply) (2021.3)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/toddiverson/.pyenv/versions/anaconda3-2022.05/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas->dfply) (1.16.0)\n",
+      "\u001b[K     |████████████████████████████████| 612 kB 5.1 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: pandas in /home/nathan/.pyenv/versions/anaconda3-2022.05/lib/python3.9/site-packages (from dfply) (1.4.2)\n",
+      "Requirement already satisfied: numpy in /home/nathan/.pyenv/versions/anaconda3-2022.05/lib/python3.9/site-packages (from dfply) (1.21.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/nathan/.pyenv/versions/anaconda3-2022.05/lib/python3.9/site-packages (from pandas->dfply) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/nathan/.pyenv/versions/anaconda3-2022.05/lib/python3.9/site-packages (from pandas->dfply) (2021.3)\n",
+      "Requirement already satisfied: six>=1.5 in /home/nathan/.pyenv/versions/anaconda3-2022.05/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas->dfply) (1.16.0)\n",
       "Installing collected packages: dfply\n",
       "Successfully installed dfply-0.3.3\n"
      ]
@@ -1241,7 +1241,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 64-bit ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1285,6 +1285,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d4c98142d5e699ac7591e84e4478b23af5ea40591ff86322816b472a02f5fc7a"
+   }
   }
  },
  "nbformat": 4,
